fixed scrollbar bug on windowns

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,12 @@ body {
   background: var(--bg);
   color: var(--text);
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;     /* IE & Edge */
+  scrollbar-width: none;        /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari */
+}
